--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=ecommerce
+
 # MySQL Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/e_commerce
 spring.datasource.username=root
@@ -14,6 +15,7 @@ spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=ecommerce-group
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.enable-auto-commit=true
+
 # Producer Configuration
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
@@ -35,5 +37,8 @@ spring.neo4j.uri=bolt://localhost:7687
 spring.neo4j.authentication.username=neo4j
 spring.neo4j.authentication.password=password
 
+# Redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
 
 
